# FotbalRobotic

./: .gitignore  C1.txt  INSTALL.TXT  README.md  TODO.txt
ControlRRemote/: control.py
ControlRRemote/pyfirmata/.hg/: dirstate  hgrc
ControlRRemote/pyfirmata/.hg/cache/: tags
ControlRRemote/pyfirmata/.hg/store/: fncache
OpenCVExamples/CPP/qt-opencv-multithreaded-1.21/: CameraConnectDialog.cpp  CameraConnectDialog.ui  CaptureThread.cpp  CaptureThread.h  ColorCalibration.h  Controller.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  Makefile  ProcessingThread.cpp  ProcessingThread.h  Robot.h  qt-opencv-multithreaded.pro
OpenCVExamples/Python/: multi_color_multiple_points_track.py  multi_color_two_object.py  pick_and_track.py  robot_test.py  robot_tracking.py  single_color_multiple_points_track.py
OpenCVTools/HSVRangeFinder/: HSVRangeFinder  HSVRangeFinder.pro  Makefile  main.cpp
OpenCVTools/HSVRangeFinder/x86/: HSVRangeFinder  Makefile  main.cpp
Robot/RoboSoccer_MQTT_v2/: README.md  RoboSoccer_MQTT_v2.ino  id.h
Robot/RoboSoccer_MQTT_v2/libraries/WiFly/: Debug.h  ParsedStream.h  PubSubClient.cpp  SpiUart.cpp  WiFlyDevice.h  WiFlyServer.cpp  WiFlyServer.h
Simulator/: INSTALL.TXT
Simulator/United2002-source/: README
Simulator/United2002-source/player/: Makefile  MemAction.C  MemAction.h  MemOption.C  MemOption.h  MemPlayer.C  MemPlayer.h  MemPosition.C  MemPosition.h  Memory.C  Memory.h  README  behave.C  behave.h  client.C  client.conf  client.h  dribble.C  dribble.h  kick.C  kick.h  netif.C  netif.h  parse.C  parse.h  quicksleep.C  reconnect  server.conf  start  test.C  test.h  turnball.h  types.h  utils.C  utils.h
Simulator/United2002-source/shared/: MemPosition.C  MemPosition.h  geometry.C  geometry.h  netif.C  netif.h  opt-array.C  opt-array_ct.C  opt-code.C  opt-def.C  opt-def_ct.C  opt-incl.h  opt-incl_ct.h  parse-playerparam-incl.C  parse-playertype-incl.C  parse-serverparam-incl.C  parse.C  parse.h  share.conf  soccer_utils.C  soccer_utils.h  types_all.h  types_ct.h  utils.C  utils.h
Simulator/rcsslogplayer-15.1.0/: Makefile.in  aclocal.m4  config.h.in  configure
Simulator/rcsslogplayer-15.1.0/qt4/: Makefile.in  score_board_painter.h
Simulator/rcsslogplayer-15.1.0/rcsslogplayer/: Makefile.in
Simulator/rcsslogplayer-15.1.0/tool/: Makefile.in
Simulator/rcssmonitor-15.1.0/: Makefile.in  aclocal.m4  config.h.in  configure
Simulator/rcssmonitor-15.1.0/src/: Makefile.in  ball_painter.h
Simulator/rcssserver-15.1.0/: Makefile.in  aclocal.m4  config.h.in  configure
Simulator/rcssserver-15.1.0/rcssbase/: Makefile.in
Simulator/rcssserver-15.1.0/rcssbase/conf/: Makefile.in
Simulator/rcssserver-15.1.0/rcssbase/gzip/: Makefile.in
Simulator/rcssserver-15.1.0/rcssbase/net/: Makefile.in
Simulator/rcssserver-15.1.0/src/: Makefile.in  coach_lang_parser.h
TrackingServer/: .gitignore
TrackingServer/TrackingServer/: .gitignore  ApplicationConfig.cpp  ApplicationConfig.hpp  CMakeLists.txt  ConfigCommon.cpp  ConfigCommon.hpp  ConfigTrackerOptions.cpp  ConfigTrackerOptions.hpp  Logging.cpp  Logging.hpp  Makefile  README.rst  camera_dreapta.yml  camera_stanga.yml  main.cpp
TrackingServer/TrackingServer/cmake_modules/: FindMosquitto.cmake
TrackingServer/arutest/: Makefile  arutest  arutest.pro  camera.yml  main.cpp  main2.cpp
TrackingServer/ext/: .gitignore  aruco-1.2.4.tgz
WirelessExamples/C/: Makefile  move  move.c
WirelessExamples/C/Template/AlgoritmFotbal/: CMakeLists.txt  main.cpp
WirelessExamples/C/Template/AlgoritmFotbal/cmake_modules/: Findaruco.cmake
WirelessExamples/Python/: controldintaste.py  cool.py  go.py  goalkeeper.py  keyboard_control_linux.py  mosquitto_subscribe.py  robotctrl.py  thread.py
WirelessExamples/Python/pyfirmata/.hg/: undo.desc
libs/WiFly/: Configuration.h  ParsedStream.cpp  PubSubClient.cpp  PubSubClient.h  WiFlyClient.cpp  WiFlyClient.h  WiFlyDevice.cpp  WiFlyServer.cpp  WiFlyServer.h
libs/WiFly/examples/WiFly_WebClient/: WiFly_WebClient.ino
libs/WiFly/examples/WiFly_WebClient_Faster/: WiFly_WebClient_Faster.ino
libs/WiFly/examples/mqtt_basic_wifly/: Sensors.h
libs/mosquitto-1.0.2/: CMakeLists.txt  ChangeLog.txt  config.mk  mosquitto.conf
libs/mosquitto-1.0.2/client/: Makefile  pub_client.c  pub_robot  pub_robot.c
libs/mosquitto-1.0.2/installer/: mosquitto-cygwin.nsi  mosquitto.nsi
libs/mosquitto-1.0.2/lib/: mosquitto.c  mosquitto.h  net_mosq.c  read_handle_shared.c
libs/mosquitto-1.0.2/lib/cpp/: mosquittopp.cpp
libs/mosquitto-1.0.2/lib/python/: mosquitto.py  readme.txt  setup.py  sub.py
libs/mosquitto-1.0.2/man/: libmosquitto.3  libmosquitto.3.xml  mosquitto-tls.7  mosquitto.8  mosquitto.8.xml  mosquitto.conf.5  mosquitto_passwd.1  mosquitto_pub.1  mosquitto_sub.1  mosquitto_sub.1.xml  mqtt.7
libs/mosquitto-1.0.2/src/: Makefile  bridge.c  conf.c  context.c  loop.c  mosquitto_broker.h  net.c  persist.h  read_handle.c  read_handle_client.c  read_handle_server.c  security_default.c  subs.c
libs/mosquitto-1.0.2/test/broker/: 01-connect-invalid-id-24.py  01-connect-uname-no-password-denied.py  02-subpub-qos0.py  (+13 more)
libs/mosquitto-1.0.5/: CMakeLists.txt  ChangeLog.txt  Makefile  config.mk
libs/mosquitto-1.0.5/client/: pub_client.c  sub_client.c
libs/mosquitto-1.0.5/installer/: mosquitto-cygwin.nsi  mosquitto.nsi
libs/mosquitto-1.0.5/lib/: CMakeLists.txt  Makefile  linker.version
libs/mosquitto-1.0.5/lib/cpp/: mosquittopp.h
libs/mosquitto-1.0.5/lib/jsws/: mosquitto.js
libs/mosquitto-1.0.5/lib/python/: mosquitto.py  setup.py
libs/mosquitto-1.0.5/man/: libmosquitto.3  mosquitto-tls.7  mosquitto-tls.7.xml  mosquitto.8  mosquitto.8.xml  mosquitto.conf.5  mosquitto.conf.5.xml  mosquitto_passwd.1  mosquitto_passwd.1.xml  mosquitto_pub.1  mosquitto_pub.1.xml  mosquitto_sub.1  mqtt.7
libs/mosquitto-1.0.5/src/: CMakeLists.txt  Makefile  conf.c  context.c  database.c  lib_load.h  logging.c  loop.c  mosquitto.c  mosquitto_passwd.c  net.c  persist.c  read_handle_server.c  security.c  security_default.c  send_server.c  service.c  subs.c
libs/mosquitto-1.0.5/test/: mosq_test.py
(+116 files in other folders)
